5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1637_2447.log
== TEST (2019-04-09 11:48:02) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	mensagem = preco-pag
else:
	mensagem = preco-pag

print(round(mensagem, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:48:24) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	mensagem = preco-pag
else:
	mensagem = preco-pag

print(round(mensagem, 2))
-- EXECUTION TIME:
0.193328
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:16) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	mensagem = preco-pag
else:
	mensagem = -preco+pag

print(round(mensagem, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:26) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	mensagem = preco-pag
else:
	mensagem = -preco+pag

print(round(mensagem, 2))
-- EXECUTION TIME:
0.181947
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:35) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	mensagem = preco-pag
else:
	mensagem = pag-preco 

print(round(mensagem, 2))
-- EXECUTION TIME:
0.160057
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:50:42) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	falta = preco-pag
else:
	troco= pag-preco 

print(round(falta, 2))
print(round(troco, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(troco, 2))
NameError: name 'troco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:54:22) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta", x)
else:
	y= pag-preco 
	print("troco, x")

-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:54:41) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta", x)
else:
	x= pag-preco 
	print("troco, x")

-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:54:55) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta", x)
else:
	x= pag-preco 
	print("troco", x)

-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:55:01) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta", x)
else:
	x= pag-preco 
	print("troco", x)

-- EXECUTION TIME:
0.127324
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:55:12) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta", x)
else:
	x= pag-preco 
	print("troco", x)

-- EXECUTION TIME:
0.196056
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:55:33) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , x)
else:
	x= pag-preco 
	print("troco" , x)

-- EXECUTION TIME:
0.126188
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:12:58) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , x)
else:
	x = pag-preco 
	print("troco" , x)

-- EXECUTION TIME:
0.154952
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:08:16) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , x)
else:
	x = pag-preco 
	print("troco" , x)

-- EXECUTION TIME:
0.141976
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:08:16) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , x)
else:
	x = pag-preco 
	print("troco" , x)

-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:41:14) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , 2)
else:
	x = pag-preco 
	print("troco" , 2)

-- EXECUTION TIME:
0.205383
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 2
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 2
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:14) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print("falta" , 2)
else:
	x = pag-preco 
	print("troco" , 2)

-- OUTPUT:
falta 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:53) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print(round("falta" , 2))
else:
	x = pag-preco 
	print(round("troco" , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:42:13) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print(round("falta" , x))
else:
	x = pag-preco 
	print(round("troco" , x))

-- EXECUTION TIME:
0.169058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2447/main.py", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:42:13) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	print(round("falta" , x))
else:
	x = pag-preco 
	print(round("troco" , x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:45:06) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:45:25) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem, x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:45:31) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem, x)
	

-- EXECUTION TIME:
0.205341
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:45:58) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem,x)
	

-- EXECUTION TIME:
0.154909
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:45:59) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:24) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta"
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco"
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:42) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:51) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:51) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print=(mensagem,x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" , x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:01) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print(mensagem,x)
	

-- EXECUTION TIME:
0.156714
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:47:01) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print(mensagem,x)
	

-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:07) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print(mensagem,x)
	

-- EXECUTION TIME:
0.272896
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:30) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco "
	
print(mensagem,x)
	

-- EXECUTION TIME:
0.214504
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:45) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="troco de "
	
print(mensagem,x)
	

-- EXECUTION TIME:
0.202628
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:54) 
-- CODE:
preco = float(input("Digite um numero: "))
pag = float(input("Digite um numero: "))

if(preco>pag):
	x = preco-pag
	round(x, 2)
	mensagem="Falta "
else:
	x = pag-preco 
	round(x, 2)
	mensagem="Troco de "
	
print(mensagem,x)
	

-- EXECUTION TIME:
0.189465
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
